syntax = "proto3";
option go_package = "github.com/twirapp/twir/libs/api/messages/modules_sr";
package messages.modules_sr;

import "google/protobuf/any.proto";

message GetResponse {
	YouTubeSettings data = 1;
}

message PostRequest {
	YouTubeSettings data = 1;
}

message GetSearchRequest {
	enum Type {
		CHANNEL = 0;
		VIDEO = 1;
	}

	repeated string query = 1;
	Type type = 2;
}

message GetSearchResponse {
	message Result {
		string id = 1;
		string title = 2;
		string thumbnail = 3;
	}

	repeated Result items = 1;
}

message YouTubeUserSettings {
	int32 max_requests = 1;
	int32 min_watch_time = 2;
	int32 min_messages = 3;
	int32 min_follow_time = 4;
}

message YouTubeSongSettings {
	int32 min_length = 1;
	int32 max_length = 2;
	int32 min_views = 3;
	repeated string accepted_categories = 4;
}

message YouTubeDenyList {
	repeated string users = 1;
	repeated string songs = 2;
	repeated string channels = 3;
	repeated string artists_names = 4;
	repeated string words = 5;
}

message YouTubeUserTranslations {
	string denied = 1;
	string max_requests = 2;
	string min_messages = 3;
	string min_watched = 4;
	string min_follow = 5;
}

message YouTubeSongTranslations {
	string denied = 1;
	string not_found = 2;
	string already_in_queue = 3;
	string age_restrictions = 4;
	string cannot_get_information = 5;
	string live = 6;
	string max_length = 7;
	string min_length = 8;
	string requested_message = 9;
	string maximum_ordered = 10;
	string min_views = 11;
}

message YouTubeChannelTranslations {
	string denied = 1;
}

message YouTubeTranslations {
	string now_playing = 1;
	string not_enabled = 2;
	string no_text = 3;
	string accept_only_when_online = 4;
	YouTubeUserTranslations user = 5;
	YouTubeSongTranslations song = 6;
	YouTubeChannelTranslations channel = 7;
}

message YouTubeSettings {
	bool enabled = 1;
	bool accept_only_when_online = 2;
	int32 max_requests = 3;
	string channel_points_reward_id = 4;
	bool announce_play = 5;
	float needed_votes_vor_skip = 6;
	YouTubeUserSettings user = 7;
	YouTubeSongSettings song = 8;
	YouTubeDenyList deny_list = 9;
	YouTubeTranslations translations = 10;
	bool take_song_from_donation_messages = 11;
	bool player_no_cookie_mode = 12;
}
